--- a/src/main/resources/static/css/admin_notice.css
+++ b/src/main/resources/static/css/admin_notice.css
@@ -17,10 +17,10 @@ h3 {
 }
 
 .container{
-	margin: 10px auto !important;
-    width: 100% !important;
-    height: 100% !important;
-    padding-left: 340px !important;
+	margin: 10px auto ;
+    width: 100% ;
+    height: 100% ;
+    padding-left: 340px ;
 }
 
 table {
@@ -203,11 +203,24 @@ span.role-ADMIN {
 }
 
 .content-container {
-/* 	margin: 0 200px; */
+ 	margin: 0 200px;
 	display: table-caption;
 	padding-left: 260px;
-	
-	/* max-width: 800px; */
+	max-width: 800px;
+}
+
+title{
+	padding: 10px 0px;
+}
+
+#hiddenContent {
+            width: 100%;
+            height: 500px; /* 원하는 높이로 변경하십시오. 예: 500px; */
+            display: none;
+        }
+.ck.ck-editor__main>.ck-editor__editable:not(.ck-focused){
+	height: 500px;
+	padding: 10px 20px;
 }
 .notice-item {
 	border-bottom: 1px solid #ccc;
@@ -253,6 +266,8 @@ h2 {
 
 #title {
 	    width: 900px;
+	    padding: 8px 10px;
+	    margin-bottom: 10px;
 }
 
 textarea {
