--- a/src/main/resources/templates/syw/my_inquiry.html
+++ b/src/main/resources/templates/syw/my_inquiry.html
@@ -1,161 +1,11 @@
 <!DOCTYPE html>
 <html>
 
+	<script
+	src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.18/dist/sweetalert2.all.min.js"></script>
 <head>
+	<link rel="stylesheet" href="/css/my_inquiry.css">
    <title>Inquiry List</title>
-   <style>
-      .content-container {
-         width: 900px;
-         margin-left: -200px;
-         margin-top: 40px;
-      }
-
-      .inquiry-item {
-         position: relative;
-         border-bottom: 1px solid #ccc;
-         margin-top: 20px;
-         cursor: pointer;
-      }
-
-
-      .inquiry-content,
-      .answer-content {
-         display: none;
-      }
-
-      .inquiry_date {
-         font-weight: normal;
-         color: rgb(193, 193, 193);
-      }
-
-      .date {
-         font-weight: normal;
-      }
-
-      .answer {
-         margin-left: 20px;
-      }
-
-      .title {
-         font-weight: normal;
-      }
-
-      .answer-content {
-         margin-left: 50px;
-         padding-bottom: 30px;
-      }
-
-
-
-      .inquiry-content {
-         margin-left: 10px;
-         margin-top: 10px;
-         margin-bottom: 10px;
-         overflow: auto;
-      }
-
-      .inquiry-content p {
-         margin-top: 0;
-         margin-bottom: 0;
-      }
-
-      .answer-prefix {
-         display: inline-block;
-         width: 50px;
-         text-align: right;
-      }
-
-      .content-container {
-         margin-left: -50px;
-      }
-
-      .button-container {
-         position: absolute;
-         right: 0;
-         bottom: 0;
-         display: none;
-         margin-top: 10px;
-      }
-
-      .edit-button {
-         padding: 1px 5px;
-         cursor: pointer;
-      }
-
-      .delete-button {
-         padding: 1px 5px;
-         cursor: pointer;
-      }
-
-      .answer-content h4 {
-         display: inline-block;
-         margin-bottom: 0;
-         margin-left: -50px;
-      }
-
-      .inquiry-item .type {
-         font-weight: bold;
-      }
-
-      .inquiry-heading {
-         color: #e40000d3;
-      }
-
-      .inquiry_pre .title,
-      .inquiry_pre .answer {
-         font-weight: normal;
-      }
-
-      .inquiryMessage {
-         padding: 20px;
-         border-radius: 7px;
-      }
-
-      .center-content3 {
-         display: flex;
-         flex-direction: column;
-         justify-content: center;
-         align-items: center;
-         margin-top: -250px;
-         margin-left: 300px;
-         height: 100vh;
-      }
-
-
-      .btn_red {
-         display: inline-block;
-         padding: 10px 20px;
-         border: none;
-         border-radius: 4px;
-         background-color: #ff0000;
-         color: #fff;
-         text-decoration: none;
-         font-size: 16px;
-         font-weight: bold;
-
-      }
-
-      .btn_red:hover {
-         background-color: #cc0000;
-      }
-
-      .btn-toggle {
-         background: none;
-         border: none;
-         cursor: pointer;
-         font-size: 1.5rem;
-      }
-
-      .button-container {
-      display: none;
-      background-color: white;
-      border: 1px solid #ccc;
-      padding: 3px;
-      margin-bottom: 17px;
-      margin-right: 20px;
-   }
-
-   </style>
    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
    <script>
       $(document).ready(function () {
@@ -182,14 +32,36 @@
             $(this).closest(".inquiry-item").find(".button-container").toggle();
          });
 
-         $(".delete-button").click(function (event) {
-            event.preventDefault();
-            var confirmation = confirm('정말 삭제하시겠습니까?');
-            if (confirmation) {
-               window.location.href = $(this).attr('href');
-            }
-         });
-      });
+        $(".delete-button").click(function (event) {
+    event.stopPropagation();
+    event.preventDefault();
+    var href = $(this).attr('href');
+
+    Swal.fire({
+        title: '정말 삭제하시겠습니까?',
+        icon: 'question',
+        showCancelButton: true,
+        confirmButtonText: '예',
+        cancelButtonText: '아니요'
+    }).then((result) => {
+        if (result.isConfirmed) {
+            Swal.fire({
+                title: '삭제 완료',
+                text: '삭제 되었습니다.',
+                icon: 'success'
+            }).then(() => {
+                window.location.href = href;
+            });
+        } else {
+            Swal.fire({
+                title: '삭제 취소',
+                text: '삭제가 취소되었습니다.',
+                icon: 'info'
+            });
+        }
+    });
+});
+});
    </script>
 </head>
 
@@ -206,10 +78,10 @@
             <li class="mypage_sidebar"><a th:href="@{/user/mypage/my_productList}"
                   sec:authorize="hasRole('ROLE_PARTNER')">내 상품 목록</a></li>
                   <li class="mypage_sidebar"><a
-				th:href="@{/user/mypage/my_acc_bookList}" sec:authorize="hasRole('ROLE_PARTNER')"> 내 숙소 예약리스트</a></li>
+            th:href="@{/user/mypage/my_acc_bookList}" sec:authorize="hasRole('ROLE_PARTNER')"> 내 숙소 예약리스트</a></li>
          </ul>
       </nav>
-      <div class="content-container" th:if="${inquiries.size()>0}">
+      <div class="my-inquiry" th:if="${inquiries.size()>0}">
          <h2 class="inquiry-heading">나의 문의 내역</h2>
          <div th:each="inquiry : ${inquiries}" class="inquiry-item" data-inquiry-id="${inquiry.id}">
             <h3 class="inquiry_pre">
