reserve.html 알림창 수정

--- a/src/main/resources/templates/kty/my_booking.html
+++ b/src/main/resources/templates/kty/my_booking.html
@@ -322,8 +322,8 @@ cancelBtns.forEach(cancelBtn => {
         	
         	const paymentKey = tid;
         	
-        	alert(paymentKey);
-        	alert(typeof paymentKey);
+        	/* alert(paymentKey);
+        	alert(typeof paymentKey); */
         	
         	 fetch(`/book/toss/cancel`, {
  	            method: "POST",
