--- a/src/main/resources/templates/syw/notice.html
+++ b/src/main/resources/templates/syw/notice.html
@@ -17,13 +17,13 @@
       <h1 class="title">공지사항 등록</h1>
       <form method="post" th:action="@{/admin/createNotice}">
          <div class="notice_title">
-            <label for="title" style="padding-bottom: 10px;">공지사항 제목</label> <input type="text" id="title"
+            <label for="title">공지사항 제목</label> <input type="text" id="title"
                name="title" required>
          </div>
       <div class="notice_content">
-                <label for="content" class="content">공지사항 내용</label><br>
+                <label for="content">공지사항 내용</label><br>
                 <!-- CKEditor의 내용을 담을 textarea -->
-                <textarea id="hiddenContent" name="content"></textarea>
+                <textarea id="hiddenContent" name="content" style="display:none;"></textarea>
                 <!-- CKEditor의 내용을 담을 div -->
                 <div id="content" data-editor="ckeditor" required></div>
             </div>
@@ -42,11 +42,8 @@
       autoParagraph: false,
   })
   .then(editor => {
-      // 에디터의 내용이 변경될 때마다 숨겨진 textarea에 값을 설정
       editor.model.document.on('change:data', () => {
           let editorData = editor.getData();
-          // Remove the <p> and </p> tags from the editor data
-          editorData = editorData.replace(/<p>/g, '').replace(/<\/p>/g, '');
           document.getElementById('hiddenContent').value = editorData;
       });
   })
@@ -55,12 +52,11 @@
   });
 
 function convertContent() {
-  // CKEditor의 내용을 textarea에 설정
   let editorData = CKEDITOR.instances.content.getData();
-  // Remove the <p> and </p> tags from the editor data
-  editorData = editorData.replace(/<p>/g, '').replace(/<\/p>/g, '');
   document.getElementById('hiddenContent').value = editorData;
 }
+
+
 </script>
    </body>
 </html>
