--- a/src/main/resources/templates/kty/my_acc_bookList.html
+++ b/src/main/resources/templates/kty/my_acc_bookList.html
@@ -45,7 +45,7 @@
 			</li>
 			<li class="mypage_sidebar"><a
 				th:href="@{/user/mypage/my_acc_bookList}"
-				sec:authorize="hasRole('ROLE_PARTNER')" class="active"> 내 숙소
+				sec:authorize="hasRole('ROLE_PARTNER')" class="active"> 내 업소
 					예약리스트</a></li>
 		</ul>
 	</nav>
