--- a/src/main/resources/templates/kty/my_acc_bookList.html
+++ b/src/main/resources/templates/kty/my_acc_bookList.html
@@ -58,7 +58,8 @@
 			<span>사장님 명 : </span> <span id="username"
 				th:text="${#authentication.name}"></span>
 		</div>
-		<select id="accSelect" class="select_acc_nam_2">
+		    <input type="date" id="datePicker" class="select_acc_nam_2" onchange="filterByDateAndAcc()">
+                <select id="accSelect" class="select_acc_nam_2" onchange="filterByDateAndAcc()">
 			<option>모두</option>
 			<option th:each="account : ${acc}" th:text="${account.acc_name}"></option>
 		</select>
@@ -141,7 +142,5 @@
 
 </body>
 
-<script>
 
-	</script>
 </html>
