datepicker, mainlogo 수정

--- a/src/main/resources/templates/jjj/header.html
+++ b/src/main/resources/templates/jjj/header.html
@@ -56,7 +56,7 @@
 	<!-- <div id="header" class="deactive">    네비 부분  -->
 	<nav class="jj_navbar" id="header">
 		<div class="jj_navbar_logo">
-			<a th:href="@{/}" class="main_logo"> <span>D</span> <span>A</span>
+			<a th:href="@{/}" class="main_logo" onclick="mainlogoOnClick(event)"> <span>D</span> <span>A</span>
 				<span>E</span> <span>B</span> <span>A</span> <span>K</span>
 			</a>
 			<!-- 클릭했을 때 홈화면으로 돌아감-->
